Restart Button Done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <img src="./rock-paper-scissors/paper.png" alt="" width="150px" id="paper" height="150px" onclick="rpsFun(this)">
         <img src="./rock-paper-scissors/scissors.png" alt="" width="150px" id="scissors" height="150px" onclick="rpsFun(this)">
     </div>
+    <div id="restart">
+
+    </div>
 </div>
 </body>
 <script src="script.js"></script>
