--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-    <h2>Challenge 3:- Rock,Paper And Scissors</h2>
+    <h2>Rock,Paper And Scissors</h2>
     <div class="flex-container" id="flex-container">
         <img src="./rock-paper-scissors/rock.png" alt="" width="150px" id="rock" height="150px" onclick="rpsFun(this)">
         <img src="./rock-paper-scissors/paper.png" alt="" width="150px" id="paper" height="150px" onclick="rpsFun(this)">
